# VEC-platform

./: .gitignore  PLATFORM_DEV_PLAN.md  SETUP_INSTRUCTIONS.md  alembic.ini  gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 0396337adc97_phase_q3e_redesign_swap_exit_for_.py  0bf785ff0a9c_v3_add_step6_expectation_vs_reality_to_.py  144049b2d153_phase_q2a_decision_confidence_and_cheap_.py  199229e83cbd_v3_step8_full_expansion_survey_demo_.py  2ab1adab2450_phase_q1b_drop_expert_columns.py  2ceec84a13ea_v3_add_confidence_to_prior_expectations.py  30b54af63ce1_v3_add_willingness_measurements.py  382e5f070b35_phase_q3e_time_to_exit_and_hirschman_.py  3a211da88f05_v3_step1_drop_legacy_fields_and_set_.py  4e7cf7554469_phase_q1d_revised_drop_quiz_columns.py  556a3c5004ba_v3_drop_fairness_likert.py  5de637634b5b_v3_add_step7_broader_impacts_shift_to_.py  614f8c045cb6_phase_q3b_add_shift_satisfaction.py  7c4d9f1e2a8b_phase_o_fix_11_entry_threshold_pct.py  831c8b336b5e_phase_h_1_split_housing_into_building_.py  83caa8b7347b_phase_q2d_s7_q8_decision_confidence.py  841119eecf89_v3_add_step5_counterfactual_to_survey_.py  904b52105716_pilot_prep_unique_survey_responses.py  96b3f64d6b1a_v3_add_session_user_input_fields_and_.py  ad3265ac2c75_phase_q3c_trust_5_ratings_and_data_.py  b1c5e4a2f0d3_phase_4a_step_renumbering.py  c8f3e2a4b7d1_phase_c_calibration_columns.py  c98e59de34ef_baseline_v2_schema.py  ca05978e8fdb_v3_add_eon_alignment_questions.py  e0f62eb775ef_phase_q1a_quiz_columns.py  (+7 more)
docs/: v3_gap_report.md
vec_platform/: __init__.py  config.py  main.py  runtime.py
(+40 files in other folders)
