[project]
name = "vec-platform"
version = "0.1.0"
description = "Virtual Energy Community - Interactive Stated-Preference Experiment Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "dash>=2.18.0",
    "plotly>=5.24.0",
    "numpy>=2.0.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
prod = [
    "psycopg2-binary>=2.9.0",
    "gunicorn>=22.0.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]
